<resources>
    <string name="app_name">Quran Azan</string>
    <string name="quran">Quran</string>
    <string name="prayer">Prayer</string>
    <string name="more">More</string>
    <string name="zikirmatik">Praymatic</string>
    <string name="kibleBul">Find Qibla</string>
    <string name="cumaMesajlari">Friday Messages</string>
    <string name="diniBilgiler">Religious information</string>
    <string name="IBADET_NEDIR">What is Worship</string>
    <string name="IMANIN_SARTLARI">Conditions of admission</string>
    <string name="ISLAMIN_SARTLARI">Terms of Islam</string>
    <string name="OTUZIKI_FARZ">32 assumptions</string>
    <string name="ELLIDORT_FARZ">54 assumptions</string>
    <string name="FARZ_NEDIR">What is supposed</string>
    <string name="SUNNET_NEDIR">What is Circumcision</string>
    <string name="VACIP_NEDIR">What is Vacip</string>
    <string name="KELIMEI_SAHADET">Islamic confession of faith</string>
    <string name="EZAN">Call to prayer</string>
    <string name="KELIMEI_TEVHID">Word-i Tawhid</string>
    <string name="NAMAZ_REKATLARI">Prayer Credits</string>
    <string name="ABDEST_NASIL_ALINIR">How to get the ablution</string>
    <string name="ERKEKLER_NAMAZ_NASIL">Men\'s How to Make Prayers</string>
    <string name="KADINLAR_NAMAZ_NASIL">Ladies How to Make Prayer</string>
    <string name="CUMA_NAMAZI">Friday Pray</string>
    <string name="ISLAM_NEDIR">Islam</string>
    <string name="NAMAZ">Prayer</string>
    <string name="ORUC">Fast</string>
    <string name="ZEKAT">Alms</string>
    <string name="ADAK">Vow</string>
    <string name="ESMAUL_HUSNA">Esma-ul Husna</string>
    <string name="CUMA_BACK_IMAGE">Background picture</string>
    <string name="CUMA_DUZ_TEMA">Flat theme</string>
    <string name="CUMA_HAZIR_MESSAGE">Default message</string>
    <string name="CUMA_MSG_COLOR">Message color</string>
    <string name="CUMA_MSG_SIZE">Message size</string>
    <string name="CUMA_MSG_KENDIN_YAZ">Write yourself</string>
    <string name="HOLD_PARALLEL">Please keep the phone parallel to the ground</string>
    <string name="ayah">Ayah</string>
    <string name="options">Options</string>
    <string name="viewOptions">View Options</string>
    <string name="textOptions">Text Options</string>
    <string name="language">Language</string>
    <string name="translationLanguage">Translation Language</string>
    <string name="showTransliteration">Show Transliteration</string>
    <string name="showTranslation">Show Translation</string>
    <string name="fontArabic">Arabic Font</string>
    <string name="fontSizeArabic">Arabic Font Size</string>
    <string name="fontSizeTransliteration">Transliteration Font Size</string>
    <string name="fontSizeTranslation">Translation Font Size</string>
    <string name="SAVE">Save</string>
    <string name="SAVE_ON">Save On</string>
    <string name="MY_DHIKR">My Dhikrs</string>
    <string name="NIGHT_MODE_MESSAGE">Background color cannot be changed in night mode</string>
    <string name="UPPERYES">YES</string>
    <string name="UPPERNO">NO</string>
    <string name="WARNING_RESET_COUNTER">Are you sure you want to reset the counter?</string>
    <string name="COUNTER_NUM_IS_ZERO">Counter count 0</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SAVE_TO_LIST">Save To List</string>
    <string name="PLEASE_GIVE_A_NAME">Please give a name</string>
    <string name="THERE_IS_SAME_ZIKIR">Have the same dhikr</string>
    <string name="CONTINUE">Continue</string>
    <string name="DELETE">Delete</string>
    <string name="DHIKR_WILL_BE_CONTINUED">zikrine devam edilecek</string>
    <string name="WAS_RECORDED">Was recorded</string>
    <string name="GOOD_FRIDAY_MESSAGE">HAVE A GOOD FRIDAY</string>
    <string name="FINISH">Finish</string>
    <string name="WHATSAPP_NOT_INSTALLED">Whatsapp have not been installed</string>
    <string name="UNEXPECTED_ERROR">Unexpected error occurred</string>
    <string name="SHARE">Share</string>
    <string name="WRITE_SOMETHING">Write something...</string>
    <string name="gpsSettings">GPS Settings</string>
    <string name="gpsSettingMessage">GPS is not enabled. Click on setting to enable and get location, please start app again after turning on GPS.</string>
    <string name="settings">Settings</string>
    <string name="msg_permission_not_granted_yet">Location access not available yet</string>
    <string name="qible_location_access_required">Location access is required to find the Qibla</string>
    <string name="location_not_ready">Location not ready, please try again.</string>
    <string name="qibla_direction">Kaaba Direction:</string>
    <string name="degree_from_north">degrees from the north.</string>
    <string name="pls_enable_location">Please turn on Location and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="letterA">A</string>
    <string name="arabicWord">بِسْــمِ اﷲِارَّحْمَنِ ارَّحِيم</string>
    <string name="transliterationWord">Bismillah-ir-Rahman-ir-Rahim</string>
    <string name="translationWord">In the name of God, most Gracious, most Compassionate</string>
    <string name="downloadLanguagePAck">Download Language packet?</string>
    <string name="loading">Loading</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="change">Change</string>
    <string name="date">Date</string>
    <string name="imsak">Fajr</string>
    <string name="gunes">Sunrise</string>
    <string name="ogle">Dhuhr</string>
    <string name="ikindi">Asr</string>
    <string name="aksam">Maghrib</string>
    <string name="yatsi">Isha</string>
    <string name="today">Today</string>
    <string name="zeroTime">00:00</string>
    <string name="setLocation">Do yo want to set your location as @ilce@?</string>
    <string name="imsakiye">Full List</string>
    <string name="selectLocation">Choose Location</string>
    <string name="alarm">Alarm</string>
    <string name="timeNotifications">Prayer Time Notifications</string>
    <string name="imsakNotifSettings">Fajr Notifications</string>
    <string name="gunesNotifSettings">Sunrise Notifications</string>
    <string name="ogleNotifSettings">Dhuhr Notifications</string>
    <string name="ikindiNotifSettings">Asr Notifications</string>
    <string name="aksamNotifSettings">Maghrib Notifications</string>
    <string name="yatsiNotifSettings">Isha Notifications</string>
    <string name="before">Before:</string>
    <string name="exactime">At time:</string>
    <string name="seperator">---</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="notifSituation">Situation</string>
    <string name="notifTime">Notification Time</string>
    <string name="notifMelody">Notification Melody</string>
    <string name="adjustNotificationDetail">Adjust Notification Detail</string>
    <string name="headerTextBefore">Before Notification</string>
    <string name="headerTextExact">Exact Notification</string>
    <string name="minutes">minutes</string>
    <string name="time">time</string>
    <string name="minutesRemain">minutes remain</string>
    <string name="dismiss">Dismiss</string>
    <string name="display">Display</string>
    <string name="remainder">Remainder</string>
    <string name="notifications">Notifications:</string>
    <string name="no_accelometer_sensor">Device has no acceleration sensor</string>
    <string name="no_magnetic_field_sensor">Device does not have magnetic field sensor</string>
    <string-array name="prayerTimes">
        <item>Fajr</item>
        <item>Sunrise</item>
        <item>Dhuhr</item>
        <item>Asr</item>
        <item>Maghrib</item>
        <item>Isha</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="sounds">
        <item>Default</item>
        <item>Melody 1</item>
        <item>Bird Chirping</item>
        <item>Beautiful Islam 1</item>
        <item>Beautiful Islam 2</item>
        <item>Al Habib</item>
        <item>Allahu Allahu</item>
        <item>Ayat Al Kursi</item>
        <item>Bismillah 1</item>
        <item>Bismillah 2</item>
        <item>Bismillahillezi</item>
        <item>Adhan 1</item>
        <item>Adhan 2</item>
        <item>Adhan 3</item>
        <item>Fajr Alarm</item>
        <item>Haj Labbaik</item>
        <item>99 Names</item>
        <item>Quran</item>
    </string-array>
    <string-array name="arabic_font">
        <item>Amiri</item>
        <item>Me Quran</item>
        <item>Noorehira</item>
        <item>PDMS Islamic</item>
        <item>PDMS Quran</item>
        <item>Scheherazade</item>
        <item>Uthmani</item>
        <item>Uthmani Ver12</item>
    </string-array>
    <string-array name="arabic_font_code">
        <item>amiri.ttf</item>
        <item>me_quran.ttf</item>
        <item>noorehira.ttf</item>
        <item>PDMS_IslamicFont.ttf</item>
        <item>PDMS_Saleem_QuranFont.ttf</item>
        <item>Scheherazade-Regular.ttf</item>
        <item>Uthmani.otf</item>
        <item>uthmanic_hafs_ver12.otf</item>
    </string-array>
    <string-array name="translation_list">
        <item>quran_original.json</item>
        <item>quran_simple_clean.json</item>
        <item>quran_tajweed.json</item>
        <item>quran_translation_list.json</item>
        <item>quran_translation_tr_diyanet.json</item>
        <item>quran_transliteration_en.json</item>
        <item>quran_transliteration_tr.json</item>
        <item>quran_uthmani.json</item>
    </string-array>
    <string name="ADMOB_APP_ID">ca-app-pub-7227467199436307~8280076787</string>
    <string name="ADMOB_BANNER_AD_UNIT_ID">ca-app-pub-7227467199436307/9074283706</string>
    <string name="ADMOB_INTERSITITIAL_AD_UNIT_ID">ca-app-pub-7227467199436307/6220765946</string>
</resources>