<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar_layout" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <!-- LANGUAGE OPTIONS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <TextView
                        style="@style/customTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="bottom"
                        android:text="@string/language" />


                </LinearLayout>

                <!-- Language -->
                <LinearLayout
                    android:id="@+id/llLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:id="@+id/imgForward1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/icon_forward" />

                </LinearLayout>

                <!-- VIEW OPTIONS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <TextView
                        style="@style/customTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="bottom"
                        android:text="@string/viewOptions" />


                </LinearLayout>

                <!-- Show Transliteration -->
                <LinearLayout
                    android:id="@+id/llShowTransliteration"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/showTransliteration"
                        android:textColor="@color/black"
                        android:textSize="17sp" />


                    <CheckBox
                        android:id="@+id/chkShowTransliteration"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:alpha="0.5"
                    android:background="@color/gray" />

                <!-- Show Translation -->
                <LinearLayout
                    android:id="@+id/llShowTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/showTranslation"
                        android:textColor="@color/black"
                        android:textSize="17sp" />


                    <CheckBox
                        android:id="@+id/chkShowTranslation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp" />


                </LinearLayout>

                <!-- TEXT OPTIONS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/clearWhite"
                    android:gravity="bottom">

                    <TextView
                        style="@style/customTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="bottom"
                        android:text="@string/textOptions" />


                </LinearLayout>

                <!-- Font Arabic -->
                <LinearLayout
                    android:id="@+id/llFontArabic"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/fontArabic"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/icon_forward" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:alpha="0.5"
                    android:background="@color/gray" />

                <!-- Font size Arabic -->
                <LinearLayout
                    android:id="@+id/llFontSizeArabic"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/fontSizeArabic"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/icon_forward" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:alpha="0.5"
                    android:background="@color/gray" />

                <!-- Font size Transliteration -->
                <LinearLayout
                    android:id="@+id/llFontSizeTransliteration"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/fontSizeTransliteration"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/icon_forward" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:alpha="0.5"
                    android:background="@color/gray" />

                <!-- Font size Translation -->
                <LinearLayout
                    android:id="@+id/llFontSizeTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="7"
                        android:gravity="center_vertical"
                        android:text="@string/fontSizeTranslation"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/icon_forward" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:alpha="0.5"
                    android:background="@color/gray" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>


</FrameLayout>